# x86-simd-sort

./: README.md  meson.build  meson_options.txt  mingw-cross.txt
.github/workflows/: c-api-linux.yaml  c-api-win.yaml
lib/: c-api-def.h  c-api-defs.h  c-api-export.h  c-api-headers.h  mk-c-api.sed  x-macro1.h  x-macro2.h  x86simdsort-c-api.h  x86simdsort-gen-c-api.h  x86simdsort.cpp  x86simdsort.h
make-c-api/: Makefile  SumDigit.cpp
src/: xss-common-includes.h
